--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "jest": "^29.0.1"
   }
 }
