--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node app.js"
   },
   "keywords": [],
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   },
   "devDependencies": {
     "jest": "^29.0.1"
